--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: linear-gradient(
-        135deg,
-        #fde2e4,
-        #f8cdda
-      );
+      background: #ffd6e0; /* soft pink */
       font-family: "Poppins", sans-serif;
       overflow: hidden;
     }
@@ -35,36 +31,36 @@
     .card {
       width: min(92%, 420px);
       padding: 40px 30px 45px;
-      background: rgba(255,255,255,0.85);
-      backdrop-filter: blur(18px);
+      background: rgba(255,255,255,0.9);
+      backdrop-filter: blur(14px);
       border-radius: 28px;
       text-align: center;
-      box-shadow: 0 30px 80px rgba(0,0,0,0.2);
+      box-shadow: 0 30px 80px rgba(0,0,0,0.18);
       position: relative;
-      animation: cardIn 0.9s ease;
+      animation: cardIn 0.8s ease;
     }
 
     @keyframes cardIn {
-      from { opacity: 0; transform: translateY(25px) scale(0.96); }
+      from { opacity: 0; transform: translateY(20px) scale(0.96); }
       to { opacity: 1; transform: translateY(0) scale(1); }
     }
 
     .emoji {
       font-size: 64px;
       margin-bottom: 10px;
-      animation: heartbeat 1.8s infinite;
+      animation: heartbeat 1.5s infinite;
     }
 
     @keyframes heartbeat {
       0%,100% { transform: scale(1); }
-      50% { transform: scale(1.12); }
+      50% { transform: scale(1.15); }
     }
 
     h2 {
       font-family: "Playfair Display", serif;
       font-size: 28px;
       color: #4a1c2f;
-      margin-bottom: 30px;
+      margin-bottom: 28px;
       line-height: 1.3;
     }
 
@@ -87,17 +83,17 @@
       font-weight: 500;
       cursor: pointer;
       box-shadow: 0 10px 25px rgba(0,0,0,0.15);
-      transition: transform 0.12s ease;
+      transition: transform 0.1s ease;
       white-space: nowrap;
       will-change: left, top;
     }
 
     button:active {
-      transform: scale(0.94);
+      transform: scale(0.93);
     }
 
     #yes {
-      background: linear-gradient(135deg, #ff4d6d, #ff758f);
+      background: linear-gradient(135deg, #ff4d6d, #ff6f91);
       color: #fff;
       box-shadow: 0 15px 35px rgba(255,77,109,0.45);
     }
@@ -108,7 +104,7 @@
     }
 
     .hint {
-      margin-top: 24px;
+      margin-top: 22px;
       font-size: 13px;
       color: #6b6b6b;
       font-style: italic;
@@ -120,7 +116,7 @@
 
     .success-message {
       display: none;
-      animation: successIn 0.7s ease;
+      animation: successIn 0.6s ease;
     }
 
     .success-message.show {
@@ -135,14 +131,14 @@
     .big-emoji {
       font-size: 90px;
       margin-bottom: 18px;
-      animation: heartbeat 1.5s infinite;
+      animation: heartbeat 1.4s infinite;
     }
 
     .success-message h1 {
       font-family: "Playfair Display", serif;
       font-size: 36px;
       color: #ff4d6d;
-      margin-bottom: 15px;
+      margin-bottom: 14px;
     }
 
     .success-message p {
@@ -207,7 +203,7 @@
 
       let yesMoves = 0;
       const MAX_YES_MOVES = 10;
-      let lastMoveTime = 0;
+      let lastMove = 0;
 
       function play(audio) {
         audio.currentTime = 0;
@@ -223,12 +219,12 @@
         button.style.top = Math.random() * maxY + "px";
       }
 
-      function tryMoveYes() {
+      function moveYesFast() {
         const now = Date.now();
         if (yesMoves >= MAX_YES_MOVES) return;
-        if (now - lastMoveTime < 120) return; // faster but controlled
+        if (now - lastMove < 60) return; // FAST response
 
-        lastMoveTime = now;
+        lastMove = now;
         play(hoverSound);
         move(yesBtn);
         yesMoves++;
@@ -240,8 +236,8 @@
         }
       }
 
-      yesBtn.addEventListener("mouseenter", tryMoveYes);
-      yesBtn.addEventListener("mousemove", tryMoveYes);
+      yesBtn.addEventListener("mouseenter", moveYesFast);
+      yesBtn.addEventListener("mousemove", moveYesFast);
 
       noBtn.addEventListener("mouseenter", () => {
         play(hoverSound);
@@ -254,9 +250,9 @@
         success.classList.add("show");
 
         if (window.confetti) {
-          confetti({ particleCount: 250, spread: 120, origin: { y: 0.65 } });
+          confetti({ particleCount: 260, spread: 120, origin: { y: 0.65 } });
           setTimeout(() => {
-            confetti({ particleCount: 150, spread: 100, origin: { y: 0.6 } });
+            confetti({ particleCount: 160, spread: 100, origin: { y: 0.6 } });
           }, 400);
         }
       });
@@ -270,7 +266,7 @@
         heart.style.animationDuration = Math.random() * 3 + 4 + "s";
         document.body.appendChild(heart);
         setTimeout(() => heart.remove(), 8000);
-      }, 420);
+      }, 380);
     });
   </script>
 
